--- a/ags-rockstar/scss/modal.scss
+++ b/ags-rockstar/scss/modal.scss
@@ -31,10 +31,11 @@
     }
     }
     .modal-wrapper-content{
-    width:100%;
-    margin:0 auto;
-    img{
     width: 100%;
+    margin: 0 auto;
+    text-align: center;
+    img{
+    width: auto;
     max-height: 500px;
     }
     }
